@@ -90,6 +90,7 @@
 #define KEY_ACTION_SCROLL_PAGE_UP		9
 #define KEY_ACTION_ESCAPE_SEQUENCE		10
 #define KEY_ACTION_HEX_CODE				11
+#define KEY_ACTION_IGNORE				12
 
 
 @interface iTermKeyBindingMgr : NSObject {
